# rust-simple-zkp

./: Cargo.toml
src/: circuit.rs  main.rs  merkle.rs  r1cs.rs
