[package]
name = "zk-service"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
num-bigint = { version = "0.4.6", features = ["rand", "serde"]}
num-integer = "0.1.46"
rand = "0.8.5"
sha2 = "0.10.8"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
bincode = "1.3.3"